# HUD-OIG-Valoraiplus_authorizedNodes--m3

./: .env  .env.example  .env.local.example  .gitignore  DEPLOYMENT_RECEIPT.md  README.md  SETUP.md  deployment-manifest-base-v2.json  deployment-manifest-base.json  hardhat.config.cjs  hardhat.config.ts  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.scripts.json  tsconfig.tsbuildinfo  valoraiplus-hardware.env  valoraiplusmedical.env  valoraiplusreserves.env  valoraisecrets.env  vercel.json
.anchor-tmp/: bitcoin_anchor_engine.py  manifest-prestage.json
api/: accountability.py  evidence.py  newt_handler.py  report.py
app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  page.tsx
cache/: solidity-files-cache.json
components/: FlowFieldParticleBackground.tsx  OmnibusData.tsx  PortHoleHUD.tsx  WalletData.tsx  connected-brokerage-account.tsx  fiscal-audit-pdf.tsx  footer-nav.tsx  forensic-evidence-vault.tsx  global-nav.tsx  omega-unified-command-center.tsx  pdf-download-button.tsx  stablecoin-verifier.tsx  twenty-second-amendment.tsx
contracts/: CSSS_NegativeCaveat.sol  EpistemicLedger.sol  SGAU-VALUEGUARD-77.77X-FINALDEG.sol  SGAU_ValueGuard_77_77X_FinalDeg.sol  VALORAIPLUS_NULL_GHOST.sol  ValorTokenFactory.sol  ValoraiplusSovereignScript.sol  (+2 more)
scripts/valorailegal_trinity/: Cargo.toml
scripts/valorailegal_trinity/src/: main.rs
valorailegal_trinity/: Cargo.toml
valorailegal_trinity/src/: main.rs
valoraiplus_omega_pdf/: README.md  generate_report.py  pyproject.toml  requirements.txt
valoraiplus_omega_pdf/src/valoraiplus_omega_pdf/: __init__.py  api.py  cli.py  financial_report.py  governance.py  intake_artifact.py  provenance.py  report_core.py  validators.py
(+525 files in other folders)
