[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valoraiplus-omega-pdf"
version = "14.1.4.0"
description = "VALORAIPLUS® Sovereign Forensic PDF Generation Engine — OMEGA v25"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "weasyprint",
    "fastapi",
    "uvicorn"
]

[project.scripts]
valor-pdf = "valoraiplus_omega_pdf.cli:main"
